# serializer version: 1
# name: test_light[light.evse_1_1_1_1_light_led-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.evse_1_1_1_1_light_led',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light LED',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light LED',
    'platform': 'v2c',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light_led',
    'unique_id': 'da58ee91f38c2406c2a36d0a1a7f8569_light_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_light[light.evse_1_1_1_1_light_led-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': <ColorMode.ONOFF: 'onoff'>,
      'friendly_name': 'EVSE 1.1.1.1 Light LED',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.evse_1_1_1_1_light_led',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light[light.evse_1_1_1_1_logo_led-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.evse_1_1_1_1_logo_led',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Logo LED',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Logo LED',
    'platform': 'v2c',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'logo_led',
    'unique_id': 'da58ee91f38c2406c2a36d0a1a7f8569_logo_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_light[light.evse_1_1_1_1_logo_led-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 192,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'EVSE 1.1.1.1 Logo LED',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.evse_1_1_1_1_logo_led',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
